<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A Pixel Story</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="startmenu_title">A PIXEL STORY</string>
    <string name="title_sell">Händler</string>
    <string name="title_equip">angelegte Rüstung</string>
    <string name="description_start_game">starts the game</string>
    <string name="description_load_game">loads the game</string>
    <string name="description_options">shows optionsmenu</string>
    <string name="description_help">shows helpmenu</string>
    <string name="new_game_string">SPIEL STARTEN</string>
    <string name="load_game_string">SPIEL LADEN</string>
    <string name="options_string">OPTIONEN</string>
    <string name="use_item_string">ausgewähltes\nItem benutzen</string>
    <string name="help_string">HILFE</string>
    <string name="default_description"></string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="achtung">Achtung</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_player_text">Das bist du!</string>
    <string name="help_merchant_text">So sehen alle aus mit denen du reden kannst. Von ihnen kannst du Quests bekommen oder auch Dinge kaufen.</string>
    <string name="help_opponent_text">So sehen deine Gegner aus</string>
    <string name="help_tipToWalk_text">In dem du irgendwo auf die Karte klickst kannst du an diese Stelle gehen.</string>
    <string name="help_stop_text">Indem du nochmal klickst brichst du die Bewegung ab.</string>
    <string name="help_zoom_text">Du kannst in die Karte rein- und rauszoomen.</string>
    <string name="help_quests_text">Hier findest du eine Übersicht über alle aktiven Quests.</string>
    <string name="help_inventory_text">Hier findest du dein Inventar. Du kannst hier deine gesammelten und angelegten Gegenstände verwalten.</string>
    <string name="help_longclick_text">Mit einem langen Klick auf einen Gegenstand in deinem Inventar kannst du es an- oder ablegen.</string>
    <string name="help_levelup_text">Hier kommst du ins nächste Gebiet.</string>
    <string name="help_leveldown_text">Und hier ins vorherige Gebiet.</string>
    <string name="title_activity_options">OptionsActivity</string>

    <string name="musicOnOff">Musik an/aus</string>
    
</resources>
