<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HelpActivity" >
	
    <RelativeLayout
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        >
	    <ImageView
		    android:id="@+id/help_player_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/player"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:contentDescription="@string/hello_world"/>
	    <TextView
	        android:id="@+id/help_player_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/help_player_image"
	        android:layout_alignTop="@+id/help_player_image"
	        android:text="@string/help_player_text" />
		<ImageView
		    android:id="@+id/help_merchant_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_below="@+id/help_player_image"
	        android:background="@drawable/merchant"
	        android:contentDescription="@string/hello_world"/>
	    <TextView
	        android:id="@+id/help_merchant_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/help_merchant_image"
	        android:layout_alignTop="@+id/help_merchant_image"
	        android:text="@string/help_merchant_text" />
	    <ImageView
		    android:id="@+id/help_opponent_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_below="@+id/help_merchant_image"
	        android:background="@drawable/opponent"
	        android:contentDescription="@string/hello_world"/>
	    <TextView
	        android:id="@+id/help_opponent_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/help_opponent_image"
	        android:layout_alignTop="@+id/help_opponent_image"
	        android:text="@string/help_opponent_text" />
	    <ImageView
		    android:id="@+id/help_tip_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_below="@+id/help_opponent_image"
	        android:background="@drawable/tiptowalk"
	        android:contentDescription="@string/hello_world"/>
	    <TextView
	        android:id="@+id/help_tip_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/help_tip_image"
	        android:layout_alignTop="@+id/help_tip_image"
	        android:text="@string/help_tipToWalk_text" />
	    <ImageView
		    android:id="@+id/help_stop_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_below="@+id/help_tip_image"
	        android:background="@drawable/tiptowalk"
	        android:contentDescription="@string/hello_world"/>
	    <TextView
	        android:id="@+id/help_stop_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/help_stop_image"
	        android:layout_alignTop="@+id/help_stop_image"
	        android:text="@string/help_stop_text" />
	    
	    
	    
	    
	     <ImageView
		    android:id="@+id/help_levelup_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_below="@+id/help_stop_image"
	        android:background="@drawable/levelup"
	        android:contentDescription="@string/hello_world"/>
	    <TextView
	        android:id="@+id/help_levelup_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/help_levelup_image"
	        android:layout_alignTop="@+id/help_levelup_image"
	        android:text="@string/help_levelup_text" />
	     <ImageView
		    android:id="@+id/help_leveldown_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_below="@+id/help_levelup_image"
	        android:background="@drawable/leveldown"
	        android:contentDescription="@string/hello_world"/>
	    <TextView
	        android:id="@+id/help_leveldown_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/help_leveldown_image"
	        android:layout_alignTop="@+id/help_leveldown_image"
	        android:text="@string/help_leveldown_text" />
	    
	    
	    
	    <ImageView
		    android:id="@+id/help_quests_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_below="@+id/help_leveldown_image"
	        android:background="@drawable/quests"
	        android:contentDescription="@string/hello_world"/>
	    <TextView
	        android:id="@+id/help_quests_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/help_quests_image"
	        android:layout_alignTop="@+id/help_quests_image"
	        android:text="@string/help_quests_text" />
	    <ImageView
		    android:id="@+id/help_inventory_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_below="@+id/help_quests_image"
	        android:background="@drawable/inventory"
	        android:contentDescription="@string/hello_world"/>
	    <TextView
	        android:id="@+id/help_inventory_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/help_inventory_image"
	        android:layout_alignTop="@+id/help_inventory_image"
	        android:text="@string/help_inventory_text" />
	   	<ImageView
		    android:id="@+id/help_longclick_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_below="@+id/help_inventory_image"
	        android:background="@drawable/longclick"
	        android:contentDescription="@string/hello_world"/>
	   	<TextView
	        android:id="@+id/help_longclick_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/help_longclick_image"
	        android:layout_alignTop="@+id/help_longclick_image"
	        android:text="@string/help_longclick_text" />
    </RelativeLayout>
</ScrollView>
	